--- a/src/public/sass/components/_gitHubGrid.scss
+++ b/src/public/sass/components/_gitHubGrid.scss
@@ -5,9 +5,10 @@
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
+    min-height: 110px;
+    height: auto;
     margin: 0.5rem 0;
     padding: 0 0.5rem;
-    height: 110px;
     background-color: #21222c;
 
     &:hover {
@@ -49,6 +50,7 @@
       border-bottom-left-radius: 3px;
       border-top: 1px solid #6b6e7e;
       border-bottom: 1px solid #6b6e7e;
+      text-wrap: balance;
     }
   }
 
